# libdxfrw

./: CMakeLists.txt
src/: libdwgr.cpp  libdxfrw.cpp  libdxfrw.h
src/intern/: dwgbuffer.cpp  dxfreader.cpp  dxfreader.h  dxfwriter.cpp
